fix: better handling dark mode in home page

--- a/src/components/home/feature-list-item/feature-list-item.module.css
+++ b/src/components/home/feature-list-item/feature-list-item.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply bg-white border border-gray-100 p-4 rounded-md shadow-md text-slate-600 hover:text-slate-900;
+  @apply p-4 rounded-md shadow-md bg-white border border-slate-100 text-slate-600 hover:text-slate-900 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-slate-100 dark:hover:text-slate-50;
 }
 
 .title {
@@ -7,5 +7,5 @@
 }
 
 .description {
-  @apply text-sm text-slate-400;
+  @apply text-sm text-slate-400 dark:text-slate-300;
 }
